Added new elements

--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
                  2
                </button>
                <button id="3">
-                 3
+                 DEL
                </button>
                <button id="4">
-                 4
+                 3
                </button>
                <button id="5">
-                 5
+                 4
                </button>
                <button id="6">
-                 6
+                 5
                </button>
                <button id="7">
-                 7
+                 +
                </button>
                <button id="8">
-                 8
+                 6
                </button>
                <button id="9">
-                 9
+                 7
                </button>
                 <button id="+">
-                 +
+                 8
                </button>
                 <button id="-">
                  -
                </button>
                 <button id="x">
-                 x
+                 9
                </button>
                 <button id="÷">
                  ÷
@@ -53,6 +53,9 @@
                <button id="=">
                  =
                </button>
+               <button id="Del">
+                x
+              </button>
                </div>
             </div>
         
