--- a/index.html
+++ b/index.html
@@ -4,61 +4,63 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="container">
-            <div id="display">
-               </div>
-               <div id="keyboard">
-                 <button id="0">
-                 0
-               </button>
-               <button id="1">
-                 1
-               </button>
-               <button id="2">
-                 2
-               </button>
-               <button id="3">
-                 DEL
-               </button>
-               <button id="4">
-                 3
-               </button>
-               <button id="5">
-                 4
-               </button>
-               <button id="6">
-                 5
-               </button>
-               <button id="7">
-                 +
-               </button>
-               <button id="8">
-                 6
-               </button>
-               <button id="9">
-                 7
-               </button>
-                <button id="+">
-                 8
-               </button>
-                <button id="-">
-                 -
-               </button>
-                <button id="x">
-                 9
-               </button>
-                <button id="÷">
-                 ÷
-               </button>
-               <button id="=">
-                 =
-               </button>
-               <button id="Del">
-                x
-              </button>
-               </div>
-            </div>
-        
+      <div class="container">
+        <div class="display">
+        <div class="first-operand">
+        </div>
+        <div class="second-operand">
+        </div>            
+           </div>
+             <button class="number" value="0">
+             0
+           </button>
+           <button class="number" value="1">
+             1
+           </button>
+           <button class="number" value="2">
+             2
+           </button>
+           <button class="number" value="3">
+             3
+           </button>
+           <button class="number" value="4">
+             4
+           </button>
+           <button class="number" value="5">
+             5
+           </button>
+          <button class="number" value="6">
+             6
+           </button>
+           <button class="number" value="7">
+             7
+           </button>
+           <button class="number" value="8">
+             8
+           </button>
+           <button class="number" value="9">
+             9
+           </button>
+            <button class="operator">
+             +
+           </button>
+            <button class="operator">
+             -
+           </button>
+            <button class="operator">
+             *
+           </button>
+            <button class="operator">
+             /
+           </button>
+           <button class="equals-key two-cols result">
+             =
+           </button>
+           <button class="delete">
+            DEL
+          </button>
+        </div>
+      
 <script src="script.js"></script>
-        </body>
+      </body>
 </html>
