added button for dot notation

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <body>
       <div class="container">
         <div class="display">
-        <div class="first-operand"></div>
-        <div class="second-operand"></div>            
+        <div class="first-operand"></div>           
            </div>
           <div class="keyboard">
             <button class="number" value="0"> 0</button>
@@ -39,7 +38,7 @@
             <button class="delete">
              DEL
            </button>           
-           <button class="number" id="dot" value=".">.</button>
+           <button class="number" id="dot" >.</button>
            <button class="equals-key">  = </button>
           </div>
         </div>
