--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <button class="number" value="1"> 1</button>
            
-            <button class="operator">%</button>
+            <button class="back-space">CE</button>
             <button class="number" value="2"> 2</button>
             <button class="number" value="3"> 3</button>
             
